# Toolings

./: .gitignore  DOCUMENTATION_INDEX.md  QUICK_REFERENCE.md  README.md  claude.md
.serena/: project.yml
.serena/memories/: blender_addon_creation_workflow.md  continuation-brief-geonode-crater-extraction.md  continuation-brief-llm-geonode-pipeline.md  continuation-brief-massexporter-hidden-collections.md  csharp_unity_conventions.md  wmh_architecture_adoption.md
3DSMAX/Modifiers/: Install.txt
3DSMAX/Scripts/: Install.txt  filenames.txt
Blender/: blender_assets.cats.txt
Blender/Addons/ClaudeVibe_WIPs/LLMGeonodePipeline/: CHANGELOG.md  GEONODE_CRITERIA.md  PUBLISH_AUDIT.md  README.md  layout_audit.py  prepare_capture.py  pyproject.toml  run_pipeline.py  server.py  tidy_layout.py
Blender/Addons/ClaudeVibe_WIPs/LLMGeonodePipeline/addon/: __init__.py  blender_manifest.toml  compat.py  layout.py  test_layout.py
Blender/Geonodes/: CLAUDE.md  GN_AttributeFunctions_4.5.blend  GN_AttributeFunctions_4.5.blend1  GN_AutoSmooth.blend  GN_Bend.blend  GN_BoundingBox.blend  GN_Cast.blend  GN_CellFrac.blend  GN_CollectionInstancer.blend  GN_ConvexHull.blend  GN_Delete.blend  GN_Delete.blend1  GN_Displace.blend  GN_DisplaceByImage.blend  GN_DualMesh.blend  GN_EdgeDestruct.blend  GN_EdgeDestruct_fixed.blend  GN_Erosion.blend  GN_Erosion_3D.blend  GN_ExtrudeSelection.blend  GN_ExtrudeSelection.blend1  GN_FillBorder.blend  GN_FlattenByBoundary.blend  GN_FlipFaces.blend  (+47 more)
docs-site/: .gitignore  README.md  astro.config.mjs  astro.config.portable.mjs  package-lock.json  package.json
(+329 files in other folders)
