[project]
name = "blender-geonode-layout-mcp"
version = "1.0.0"
description = "MCP server that reads a Blender Geometry Nodes graph as an annotated screenshot + structured table and rearranges it deterministically."
authors = [{ name = "Stephan Viranyi (Stephko)" }]
requires-python = ">=3.10"
dependencies = [
    "mcp[cli]>=1.2.0",
    "pillow>=10.0.0",
]

[project.scripts]
geonode-layout-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
include = ["server.py"]
